// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-layout Components PageLayout changes width when mobile property changes 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #background;
  min-height: 100vh;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  width: 100%;
  background-color: grey;
}

.c3 {
  width: 100%;
}

.c4 {
  padding: 14px 22px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  width: 100%;
  background-color: #divider;
}

<div
  className="Layout c0"
>
  <header
    className="PageHeader c1"
  />
  <div
    className="Main c2"
  >
    <nav
      className="Navigation c3"
    />
    <div
      className="Content c4"
    />
  </div>
  <div
    className="PageFooter c5"
  />
</div>
`;

exports[`ui-elements-layout Components PageLayout should render with default state 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #background;
  min-height: 100vh;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  width: 100%;
  background-color: grey;
}

.c3 {
  width: auto;
}

.c4 {
  padding: 14px 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  width: 100%;
  background-color: #divider;
}

<div
  className="Layout c0"
>
  <header
    className="PageHeader c1"
  />
  <div
    className="Main c2"
  >
    <nav
      className="Navigation c3"
    />
    <div
      className="Content c4"
    />
  </div>
  <div
    className="PageFooter c5"
  />
</div>
`;
